# libphonenumber

./: .gitignore  LICENSE  libphonenumber.cabal
.github/workflows/: ci.yaml
cxxbits/: c_phonenumber.cpp  c_phonenumberutil.cpp
include/: c_phonenumber.h  c_phonenumberutil.h  common.h
src/Data/PhoneNumber/: Number.hs  Util.hs
src/Data/PhoneNumber/Internal/: Common.chs  Number.chs  Util.chs
test/: Leak.hs  Spec.hs  libphonenumber.supp
